# MotionPlanning

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Makefile  README.md  REFACTOR_ANALYSIS.md  build_mkdocs.sh  index.html  main.py  mkdocs.yml  mypy-output.txt  mypy.,ini  mypy.ini  pyproject.toml
.github/workflows/: ci-pypnc.yml  ci.yml
Control/: LQR_Dynamic_Model.py  LQR_Kinematic_Model.py  MPC_Frenet_Frame.py  MPC_XY_Frame.ipynb  MPC_XY_Frame.py  Pure_Pursuit copy 2.py  Pure_Pursuit copy.py  Pure_Pursuit.py  Rear_Wheel_Feedback.py  Stanley.py  animation_updater.py  config_control.py  controller_base.py  controller_factory.py  controllers_adapters.py  draw.py  generic_simulator.py  logger.py  path_structs.py  path_tools.py  performance_monitor.py  pid_speed_control.py  show_path.py  simulation_common.py  simulation_runner copy.py  simulation_runner.py  simulation_runner_LQR_Dynamic_Model.py  simulation_runner_LQR_Kinematic_Model.py  simulation_runner_MPC_Frenet_Frame.py  simulation_runner_MPC_XY_Frame.py  simulation_runner_configurable.py  simulation_runner_purepursuit.py  simulation_runner_rear_wheel_feedback.py  simulation_runner_stanley.py  utils.py
Control copy/: MPC_XY_Frame.py  Pure_Pursuit.py  controller_base.py  path_tools.py  pid_speed_control.py  utils.py
Control_copy/: LQR_Dynamics_Model.py  LQR_Kinematic_Model.py  MPC_Frenet_Frame.py  README.md  Rear_Wheel_Feedback.py  Stanley.py  draw.py  draw_lqr.py  example_runner.py  path_structs.py
Planning/CurvesGenerator/: cubic_spline.py  draw.py  dubins_path.py  quintic_polynomial.py  reeds_shepp.py
Planning/HybridAstarPlanner/: astar.py  draw.py  hybrid_astar.py  hybrid_astar_with_trailer.py
Planning/LatticePlanner/: draw.py  env.py  lattice_planner.py
control/: index.html
control/Definition/: index.html
control/LQR/: index.html
control/MPC/: index.html
control/PurePursuit/: index.html
control/RearWheelFeedback/: index.html
control/Stanley/: index.html
docs/: index.md  snippets-with-links.md
pypnc/: __init__.py  models.py  utils.py
ref/: ref.csl
search/: search_index.json
snippets-with-links/: index.html
tests/: conftest.py  test_controllers.py  test_imports.py  test_pure_pursuit.py  test_utils.py
tutorials/: __init__.py  compare_tan_approx.py  draw_purepursuit_geometry.py  draw_rear_wheel_feedback_geometry.py  draw_stanley_geometry.py  factory_pattern_example.py  generic_simulator.py  show_path.py  simulation_runner_LQR_Dynamic_Model.py  simulation_runner_MPC_Frenet_Frame.py  simulation_runner_MPC_XY_Frame.py  simulation_runner_configurable.py  simulation_runner_purepursuit.py  simulation_runner_rear_wheel_feedback.py  simulation_runner_stanley.py
(+53 files in other folders)
