[project]
name = "motionplanning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "anyio==4.11.0",
    "asttokens==3.0.0",
    "cfgv==3.4.0",
    "clarabel>=0.11.1",
    "click>=8.3.1",
    "comm==0.2.3",
    "contourpy>=1.3.3",
    "cvxpy>=1.7.3",
    "cycler>=0.12.1",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "distlib==0.4.0",
    "docutils==0.22.3",
    "executing==2.2.1",
    "filelock==3.20.0",
    "flake8>=7.3.0",
    "fonttools>=4.60.1",
    "h11==0.16.0",
    "heapdict>=1.0.1",
    "identify==2.6.15",
    "idna==3.11",
    "iniconfig==2.1.0",
    "ipykernel==7.1.0",
    "ipython==9.6.0",
    "ipython-pygments-lexers==1.1.1",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.9.1",
    "kiwisolver>=1.4.9",
    "loguru>=0.7.0",
    "loro==1.8.2",
    "marimo==0.17.8",
    "markdown==3.10",
    "matplotlib==3.10.1",
    "matplotlib-inline==0.2.1",
    "mccabe>=0.7.0",
    "mkdocs-marimo>=0.2.1",
    "msgspec-m==0.19.3",
    "munkres==1.1.4",
    "mypy==1.15.0",
    "mypy-extensions>=1.1.0",
    "narwhals==2.11.0",
    "nest-asyncio==1.6.0",
    "nodeenv==1.9.1",
    "numpy>=2.3.4",
    "osqp>=1.0.5",
    "packaging>=25.0",
    "parso==0.8.5",
    "pathspec>=0.12.1",
    "pexpect==4.9.0",
    "pillow>=12.0.0",
    "platformdirs>=4.5.0",
    "pluggy==1.5.0",
    "pre-commit==4.3.0",
    "prompt-toolkit==3.0.52",
    "psutil>=7.1.3",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pycodestyle>=2.14.0",
    "pyflakes>=3.4.0",
    "pygments==2.19.2",
    "pymdown-extensions==10.17.1",
    "pyparsing>=3.2.5",
    "pyside6==6.8.2",
    "pytest==8.3.5",
    "python-dateutil>=2.9.0.post0",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "qdldl>=0.1.7.post5",
    "ruff==0.14.5",
    "schemdraw==0.21",
    "scipy>=1.16.3",
    "scs>=3.2.9",
    "setuptools==75.8.2",
    "shiboken6==6.8.2",
    "six>=1.17.0",
    "sniffio==1.3.1",
    "stack-data==0.6.3",
    "starlette==0.50.0",
    "tomlkit==0.13.3",
    "tornado>=6.5.2",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "unicodedata2>=17.0.0",
    "uv==0.9.9",
    "uvicorn==0.38.0",
    "virtualenv==20.35.3",
    "wcwidth==0.2.14",
    "websockets==15.0.0",
    "wheel==0.45.1",
]

[tool.ruff]
line-length = 120
lint.select = ["C", "E", "F", "W"]
lint.ignore = ["E501", "E203", "C901"]  # 添加C901忽略复杂度警告
lint.extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
